# media

./: .gitignore  .gitmodules  build.gradle  common_config.gradle  common_library_config.gradle  constants.gradle  core_settings.gradle
demos/cast/: build.gradle
demos/compose/: build.gradle
demos/composition/: build.gradle
demos/effect/: build.gradle
demos/gl/: build.gradle
demos/main/: build.gradle
demos/session/: build.gradle
demos/session_automotive/: build.gradle
demos/session_service/: build.gradle
demos/shortform/: build.gradle
demos/surface/: build.gradle
demos/transformer/: build.gradle
docsamples/: build.gradle
libraries/cast/: build.gradle
libraries/common/: build.gradle
libraries/common_ktx/: build.gradle
libraries/container/: build.gradle
libraries/cpp_audiosink/: ANDROID_SINK_TRANSPLANT_PLAN.md  README.md  sync_from_xbmc.sh
libraries/cpp_audiosink/kodi/xbmc/: ServiceBroker.cpp  ServiceBroker.h
libraries/cpp_audiosink/kodi/xbmc/commons/: Exception.cpp  Exception.h  ilog.h
libraries/cpp_audiosink/kodi/xbmc/cores/: DataCacheCore.h  FFmpeg.cpp  FFmpeg.h
libraries/cpp_audiosink/kodi/xbmc/filesystem/: File.h
libraries/cpp_audiosink/kodi/xbmc/guilib/: DispResource.h
libraries/cpp_audiosink/kodi/xbmc/resources/: LocalizeStrings.h  ResourcesComponent.h
libraries/cpp_audiosink/kodi/xbmc/settings/: AdvancedSettings.h  Settings.h  SettingsComponent.h
libraries/cpp_audiosink/kodi/xbmc/settings/lib/: Setting.h  SettingDefinitions.h  SettingsManager.h
libraries/cpp_audiosink/kodi/xbmc/utils/: BitstreamConverter.cpp  StringUtils.cpp  TimeUtils.cpp  log.cpp  log.h
libraries/cpp_audiosink/kodi/xbmc/windowing/: WinSystem.h
libraries/database/: build.gradle
libraries/datasource/: build.gradle
libraries/datasource_cronet/: build.gradle
libraries/datasource_okhttp/: build.gradle
libraries/datasource_rtmp/: build.gradle
libraries/decoder/: build.gradle
libraries/decoder_av1/: build.gradle
libraries/decoder_av1/src/main/jni/: build_dav1d.sh  dav1d_jni.cc  high_bit_depth_downconversion.h
libraries/decoder_av1/src/test/native/: high_bit_depth_downconversion_test.cc
libraries/decoder_ffmpeg/: README.md  build.gradle
libraries/decoder_ffmpeg/src/main/jni/: CMakeLists.txt  build_ffmpeg.sh  build_libplacebo_android.sh  build_mbedtls_android.sh  ffaudio.cpp  ffcommon.cpp  ffcommon.h  ffmain.cpp  ffvideo.cpp
libraries/decoder_ffmpeg/src/main/jni/ffmpeg-headers/: config.h  config_components.h  libavcodec  libavfilter  libavformat  libavutil  libswresample  libswscale
libraries/decoder_flac/: build.gradle
libraries/decoder_iamf/: build.gradle
libraries/decoder_midi/: build.gradle
libraries/decoder_mpegh/: build.gradle
libraries/decoder_mpegh/src/main/: AndroidManifest.xml
libraries/decoder_opus/: build.gradle
libraries/decoder_vp9/: build.gradle
libraries/effect/: build.gradle
libraries/exoplayer/: build.gradle
libraries/exoplayer_dash/: build.gradle  proguard-rules.txt
libraries/exoplayer_hls/: build.gradle
libraries/exoplayer_ima/: build.gradle
libraries/exoplayer_kodi_cpp_audiosink/: build.gradle  proguard-rules.txt
libraries/exoplayer_kodi_cpp_audiosink/src/main/jni/: CMakeLists.txt
libraries/exoplayer_kodi_cpp_audiosink/src/main/jni/include/: kodi_cpp_jni_support.h
libraries/exoplayer_kodi_cpp_audiosink/src/main/jni/include/androidjni/: ActivityManager.h  AudioAttributes.h  AudioFormat.h  AudioManager.h  AudioTimestamp.h  AudioTrack.h  Build.h  ByteBuffer.h  Context.h  JNIThreading.h
libraries/exoplayer_kodi_cpp_audiosink/src/main/jni/include/libavutil/: avconfig.h
libraries/exoplayer_kodi_cpp_audiosink/src/main/jni/src/: KodiActiveAEEngine.cpp  KodiActiveAEEngine.h  KodiAudioTrackOutput.cpp  KodiAudioTrackOutput.h  KodiIecPipeline.cpp  KodiIecPipeline.h  KodiTrueHdAEEngine.cpp  KodiTrueHdAEEngine.h  KodiTrueHdAudioTrackOutput.cpp  KodiTrueHdAudioTrackOutput.h  KodiTrueHdFfmpegMatPacker.cpp  KodiTrueHdFfmpegMatPacker.h  KodiTrueHdIecPipeline.cpp  KodiTrueHdIecPipeline.h  kodi_cpp_android_context.cpp  kodi_cpp_androidjni.cpp  kodi_cpp_audiosink_bridge.cpp  kodi_cpp_session_bridge.cpp  kodi_cpp_truehd_session_bridge.cpp
libraries/exoplayer_kodi_native_sink/: build.gradle  proguard-rules.txt
libraries/exoplayer_kodi_native_sink/src/main/: AndroidManifest.xml
libraries/exoplayer_kodi_native_sink/src/main/jni/: AEAudioFormat.h  AEBitstreamPacker.cpp  AEBitstreamPacker.h  AEChannelData.h  AEChannelInfo.cpp  AEChannelInfo.h  AEDeviceInfo.cpp  AEDeviceInfo.h  AEPackIEC61937.cpp  AEPackIEC61937.h  AESinkAUDIOTRACK.cpp  AESinkAUDIOTRACK.h  AEStreamInfo.cpp  AEStreamInfo.h  ActiveAEPolicy.cpp  ActiveAEPolicy.h  ActiveAESettings.cpp  ActiveAESettings.h  ActiveAESink.cpp  ActiveAESink.h  CJNIAudioAttributes.cpp  CJNIAudioAttributes.h  CJNIAudioFormat.cpp  CJNIAudioFormat.h  CJNIAudioTimestamp.cpp  CJNIAudioTimestamp.h  CJNIAudioTrack.cpp  CJNIAudioTrack.h  CMakeLists.txt  DVDAudioCodecPassthrough.cpp  DVDAudioCodecPassthrough.h  KodiActiveAEBufferCompat.cpp  KodiActiveAEBufferCompat.h  KodiActorProtocol.cpp  KodiActorProtocol.h  KodiAndroidPassthroughEngine.cpp  KodiAndroidPassthroughEngine.h  KodiCapabilitySelector.cpp  KodiCapabilitySelector.h  KodiEndTime.h  (+8 more)
libraries/exoplayer_rtsp/: build.gradle
libraries/exoplayer_smoothstreaming/: build.gradle
libraries/exoplayer_workmanager/: build.gradle
libraries/extractor/: build.gradle
libraries/inspector/: build.gradle
libraries/muxer/: build.gradle
libraries/session/: build.gradle
libraries/test_data/: build.gradle
libraries/test_exoplayer_playback/: build.gradle
libraries/test_proguard/: build.gradle
libraries/test_session_common/: build.gradle
libraries/test_session_current/: build.gradle
libraries/test_utils/: build.gradle
libraries/test_utils_robolectric/: build.gradle
libraries/transformer/: build.gradle
libraries/ui/: build.gradle
libraries/ui_compose/: build.gradle
libraries/ui_compose_material3/: build.gradle
libraries/ui_leanback/: build.gradle
testapps/controller/: build.gradle
(+93 files in other folders)
